Sun Feb  5 15:36:52 GMT 2012  Colin Watson  <cjwatson@debian.org>

	* README (Copyright and licensing): New year.

Sun Feb  5 13:14:42 GMT 2012  Colin Watson  <cjwatson@debian.org>

	* manual/README: Fix spelling mistake.

Sun Feb  5 02:11:04 GMT 2012  Colin Watson  <cjwatson@debian.org>

	* Version: 2.6.1-pre1.
	* man/po4a/po/man-db-manpages.pot, po/man-db.pot, po/*.po: Update.

Sun Feb  5 01:34:14 GMT 2012  Colin Watson  <cjwatson@debian.org>

	Fix 'make distcheck' to pass with Automake 1.11.2.

	* Makefile.am (distuninstallcheck_listfiles): Ignore the
	  configuration file, which is deliberately left in place on
	  uninstall.
	* configure.ac (AM_INIT_AUTOMAKE): Add -Wno-override.
	* src/Makefile.am (EXTRA_DIST): Force distribution of lexgrog.c and
	  zsoelim.c.

Sun Feb  5 00:53:23 GMT 2012  Colin Watson  <cjwatson@debian.org>

	* docs/HACKING (Revision control): Recommend 'bzr branch' rather
	  than 'bzr get'; the latter is apparently deprecated in bzr 2.4.

Sat Feb  4 23:38:15 GMT 2012  David Prévot  <taffit@debian.org>

	* man/man1/apropos.man1 (SEE ALSO), man/man1/lexgrog.man1 (SEE
	  ALSO), man/man1/man.man1 (SEE ALSO), man/man1/manconv.man1 (SEE
	  ALSO), man/man1/manpath.man1 (SEE ALSO), man/man1/whatis.man1 (SEE
	  ALSO), man/man1/zsoelim.man1 (SEE ALSO), man/man8/catman.man8 (SEE
	  ALSO), man/man8/mandb.man8 (SEE ALSO): Alphabetise references and
	  remove trailing full stops, per man-pages(7) (Debian bug #651482).
	* man/po4a/po/man-db-manpages.pot, man/po4a/po/*.po: Update.

Sat Feb  4 23:27:39 GMT 2012  Marek Černocký  <marek@manet.cz>

	* po/cs.po: Update from Translation Project.
	* man/THANKS: Update.

Sat Feb  4 23:10:58 GMT 2012  Colin Watson  <cjwatson@debian.org>

	* libdb/db_lookup.c (split_data): Use ngettext to translate strings
	  containing plural forms (Savannah bug #34968).
	* src/lexgrog.l (too_big): Likewise.
	* src/mandb.c (main): Likewise.
	* po/man-db.pot, po/*.po: Update.
