@@ -1,3 +1,8 @@
+Sun Feb  5 21:57:49 GMT 2012  Colin Watson  <cjwatson@debian.org>
+
+	* release.sh: Make sure that src/lexgrog.c and src/zsoelim.c are
+	  fresh.
+
 Sun Feb  5 15:36:52 GMT 2012  Colin Watson  <cjwatson@debian.org>
 
 	* README (Copyright and licensing): New year.
